# internetmonitor-client-python

./: README.md  pyproject.toml
src/internetmonitor_client/: client.py
test/: test_client.py
